--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
     <!--Here is the footer-->
     <footer>
         <p>Jose Barreto Webpage Project for IT 3203 </p>
+        <p>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                    src="https://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="Valid CSS!" />
+            </a>
+        </p>
     </footer>
 </body>
 </html>
