--- a/resources.html
+++ b/resources.html
@@ -17,6 +17,7 @@
             <li><a href="beginning.html">The Beginning</a></li>
             <li><a href="advancements.html">Advancements in HTML</a></li>
             <li><a href="resources.html">Resources</a></li>
+            <li><a href="quiz.html">Take Quiz</a></li>
         </ul>
     </nav>
     <main>
@@ -38,7 +39,10 @@
                     <a href="https://www.codecademy.com/" target="_blank">Codecademy</a>
                     <p>Used as a training tool to learn the fundamentals of HTML and CSS</p>
                 </li>
-                
+                <li>
+                    <a href="https://stackoverflow.com/questions" target="_blank">Stack Overflow</a>
+                    <p>Community where people ask questions about code, used as a learning tool by seeing how other people fixed issues with their code.</p>
+                </li>
             </ul>
                  
             </section>
