--- a/beginning.html
+++ b/beginning.html
@@ -17,6 +17,7 @@
             <li><a href="beginning.html">The Beginning</a></li>
             <li><a href="advancements.html">Advancements in HTML</a></li>
             <li><a href="resources.html">Resources</a></li>
+            <li><a href="quiz.html">Take Quiz</a></li>
         </ul>
     </nav>
     <main>
