--- a/quiz.html
+++ b/quiz.html
@@ -6,16 +6,6 @@
         <title>Take Quiz</title>
         <link rel="icon" type="image/x-icon" href="Megaevo.png">
         <link rel="stylesheet" href="style.css">
-    <style>
-    .question {
-      margin-bottom: 20px;
-    }
-    #results {
-      margin-top: 20px;
-      font-weight: bold;
-      
-    }
-    </style>
     </head>
 <body>
     <header>
@@ -158,5 +148,16 @@
       document.getElementById("results").innerHTML = results;
     }
   </script>
+  <!--Code for the Footer-->
+  <footer>
+    <p>Jose Barreto Webpage Project for IT 3203 </p>
+    <p>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px"
+                src="https://jigsaw.w3.org/css-validator/images/vcss"
+                alt="Valid CSS!" />
+        </a>
+    </p>
+</footer>
 </body>
 </html>
