--- a/advancements.html
+++ b/advancements.html
@@ -1,36 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web Evolution</title>
-        <link rel="icon" type="image/x-icon" href="Megaevo.png">
-        <link rel="stylesheet" href="style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Timeline of HTML advancements from 1991 to present.">
+    <title>HTML Advancements</title>
+    <link rel="icon" type="image/x-icon" href="Megaevo.png">
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <header>
         <h1>The Evolution of the Web</h1>
     </header>
     <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="beginning.html">The Beginning</a></li>
-            <li><a href="advancements.html">Advancements in HTML</a></li>
-            <li><a href="resources.html">Resources</a></li>
-            <li><a href="quiz.html">Take Quiz</a></li>
+        <ul class="nav-menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="beginning.html">Beginnings</a></li>
+          <li><a href="advancements.html">Advancements</a></li>
+          <li><a href="quiz.html">Quiz</a></li>
+          <li><a href="resources.html">Resources</a></li>
         </ul>
     </nav>
     <main>
         <section class="box">
-            <h2>HTML timeline:</h2>
+            <h2>HTML Timeline</h2>
+            <p>HTML started out as a simple way to organize text and links on webpages back in the 90s. As the web grew, so did HTML, adding features such as tables and forms in later versions. The biggest update came with HTML5 in 2014, which brought in features like support for video, better organization of content, and tools for creating more interactive and responsive websites. Now, HTML5 is the standard for building modern websites.</p>
+            
+                 <figure>
+                    <img src="https://www.tutorialspoint.com/html/images/html-version-release-year.jpg" alt="Timeline of HTML versions from 1991 to 2014" class="rounded-img">
+                    <figcaption>Timeline of HTML versions from 1991 to 2014</figcaption>
+                </figure>
+            <!-- HTML 1.0 -->
+    <article class="version-card">
+        <h2>HTML 1.0 (1991)</h2>
+        <div class="examples">
+            <div>
+                <pre><code>&lt;p&gt;First paragraph&lt;/p&gt;
+&lt;a href="next.html"&gt;Next page&lt;/a&gt;</code></pre>
+            </div>
+            <div>
+                <ul>
+                    <li>18 basic tags</li>
+                    <li>Hyperlinks between documents</li>
+                </ul>
+            </div>
+        </div>
+    </article>
 
-            <p>HTML started out as a simple way to organize text and links on webpages back in the 90s. As the web grew, so did HTML, adding features such as tables and forms in 
-                later versions. The biggest update came with HTML5 in 2014, which brought in features like support for video, better organization of content, and tools for 
-                creating more interactive and responsive websites. Now, HTML5 is the standard for building modern websites.</p>
-                
-                 <img src="https://www.tutorialspoint.com/html/images/html-version-release-year.jpg" alt="HTML Timeline" class="timeline">
-            </section>
+    <!-- HTML 2.0 -->
+    <article class="version-card">
+        <h2>HTML 2.0 (1995)</h2>
+        <div class="examples">
+            <div>
+                <pre><code>&lt;form action="submit"&gt;
+  &lt;input type="text" name="email"&gt;
+&lt;/form&gt;</code></pre>
+            </div>
+            <div>
+                <ul>
+                    <li>Forms for user input</li>
+                    <li>Basic table support</li>
+                </ul>
+            </div>
+        </div>
+    </article>
+
+    <!-- HTML 3.0 -->
+    <article class="version-card">
+        <h2>HTML 3.0 (1997)</h2>
+        <div class="examples">
+            <div>
+                <pre><code>&lt;table border="1"&gt;
+  &lt;tr&gt;&lt;td&gt;Cell 1&lt;/td&gt;&lt;/tr&gt;
+&lt;/table&gt;
+
+&lt;font size="+1"&gt;Big text&lt;/font&gt;</code></pre>
+            </div>
+            <div>
+                <ul>
+                    <li>Advanced tables</li>
+                    <li>Font styling (deprecated now) in favor of CSS Style Sheets</li>
+                    <li>Early CSS support</li>
+                </ul>
+            </div>
+        </div>
+    </article>
+
+    <!-- HTML 4.0 -->
+    <article class="version-card">
+        <h2>HTML 4.0 (1997)</h2>
+        <div class="examples">
+            <div>
+                <pre><code>&lt;link rel="stylesheet" href="style.css"&gt;
+
+&lt;div id="header"&gt;
+  &lt;h1&gt;Title&lt;/h1&gt;
+&lt;/div&gt;</code></pre>
+            </div>
+            <div>
+                <ul>
+                    <li>Full CSS integration</li>
+                    <li>Framesets (now deprecated)</li>
+                    <li>Strict separation of structure/presentation</li>
+                </ul>
+            </div>
+        </div>
+    </article>
+
+    <!-- HTML5 -->
+    <article class="version-card">
+        <h2>HTML5 (2014)</h2>
+        <div class="examples">
+            <div>
+                <pre><code>&lt;video controls&gt;
+&lt;source src="movie.mp4"type="video/mp4"&gt;
+&lt;/video&gt;
+
+&lt;article&gt;
+  &lt;header&gt;...&lt;/header&gt;
+&lt;/article&gt;</code></pre>
+            </div>
+            <div>
+                <ul>
+                    <li>Semantic elements (header, nav, section)</li>
+                    <li>Native multimedia</li>
+                    <li>Canvas/WebGL graphics</li>
+                </ul>
+            </div>
+        </div>
+    </article>
+        </section>
     </main>
+    <!--Here is the footer-->
     <footer>
         <p>Jose Barreto Webpage Project for IT 3203 </p>
         <p>
