--- a/resources.html
+++ b/resources.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web Evolution</title>
-        <link rel="icon" type="image/x-icon" href="Megaevo.png">
-        <link rel="stylesheet" href="style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="References and resources for web evolution research.">
+    <title>Web Resources</title>
+    <link rel="icon" type="image/x-icon" href="Megaevo.png">
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <header>
         <h1>The Evolution of the Web</h1>
     </header>
     <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="beginning.html">The Beginning</a></li>
-            <li><a href="advancements.html">Advancements in HTML</a></li>
-            <li><a href="resources.html">Resources</a></li>
-            <li><a href="quiz.html">Take Quiz</a></li>
+        <ul class="nav-menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="beginning.html">Beginnings</a></li>
+          <li><a href="advancements.html">Advancements</a></li>
+          <li><a href="quiz.html">Quiz</a></li>
+          <li><a href="resources.html">Resources</a></li>
         </ul>
     </nav>
     <main>
         <section class="box">
             <h2>References and Resources</h2>
-
             <p>Below is a list of resources and citations used for this project.</p>
 
+            <h3>Online Resources</h3>
+            <!--Resource List-->
             <ul class="resource-list">
                 <li>
                     <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>
@@ -43,10 +45,17 @@
                     <a href="https://stackoverflow.com/questions" target="_blank">Stack Overflow</a>
                     <p>Community where people ask questions about code, used as a learning tool by seeing how other people fixed issues with their code.</p>
                 </li>
+                <li>
+                    <a href="https://home.cern/science/computing/birth-web/short-history-web" target="_blank">CERN</a>
+                    <p>CERN provided the information regarding Tim Berners-Lee and the creation of the World Wide Web</p>
+                </li>
+                <li>
+                    <a href="https://www.w3.org/TR/html401/cover.html#minitoc" target="_blank">W3C</a>
+                    <p>W3C provided information about each version of HTML</p>
+                </li>
             </ul>
-                 
-            </section>
     </main>
+    <!--Here is the footer-->
     <footer>
         <p>Jose Barreto Webpage Project for IT 3203 </p>
         <p>
